fix(datetime): fix sizing on ios

--- a/core/src/components/datetime/datetime.ios.scss
+++ b/core/src/components/datetime/datetime.ios.scss
@@ -8,7 +8,9 @@
   --title-color: #{$text-color-step-400};
 }
 
-:host(:not(.datetime-presentation-time)) {
+:host(.datetime-presentation-date-time),
+:host(.datetime-presentation-time-date),
+:host(.datetime-presentation-date) {
   min-height: 300px;
 }
 
